# Irodori-TTS-API

./: .env.example  .gitignore  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu
src/: app.py  main.py
src/configs/: config.py  env.py
src/lib/: api_error.py
src/middleware/: error_handler.py  logger.py
src/routes/: __init__.py
src/routes/v1/: __init__.py  speakers.py  synthesize.py
src/schemas/: speaker.py  synthesize.py
src/services/: logger.py  speaker_store.py  tts_runtime.py
tests/: test_concurrent_inference.py
